feat: Port 번호 설정

--- a/admin-auth-service-container/src/main/resources/application.yml
+++ b/admin-auth-service-container/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   shutdown: graceful
+  port: 8200
 
 spring:
   data:
@@ -23,4 +24,4 @@ spring:
 
 logging:
   level:
-    com.example.auth.admin.service: debug
+    com.example.admin.auth.service: debug
