feat: Infra 패키지 추가

--- a/infra/docker-compose/.env
+++ b/infra/docker-compose/.env
@@ -1,7 +1,8 @@
 # Docker setting
-COMPOSE_PROJECT_NAME=e-commerce-auth-mysql
+COMPOSE_PROJECT_NAME=e-commerce
 
 # MySQL setting
+AUTH_MYSQL_CONTAINER_NAME=auth-mysql
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=auth-db
 TZ=Asia/Seoul
@@ -13,3 +14,10 @@ MYSQL_CUSTOM_CONFIG_PATH=./db/conf.d
 # etc setting
 MYSQL_BINDING_PORT=3306
 MYSQL_PORT=3306
+
+# Redis Setting
+REDIS_CONTAINER_NAME=auth-redis
+REDIS_BINDING_PORT=6379
+REDIS_PORT=6379
+REDIS_HOSTNAME=redis
+
